API-Endpoints to manage unavailabilities (#110)
Changelog: feat
